tests/build/cases/widget_new/malformed_property_path2.stderr
error: expected `=`
 --> $DIR/malformed_property_path2.rs:5:15
  |
5 |         margin! = 0;
  |               ^
