tests/build/cases/widget_new/malformed_property_path2.rs
use zero_ui::{properties::margin, widgets::blank};

fn main() {
    let _ = blank! {
        margin! = 0;
    };
}
